fix top and bottom of layout + overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Lexend+Deca&display=swap");
+@import url("./normalize.css");
 
 html {
   font-size: 15px;
   font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 body {
   background: hsl(233, 47%, 7%);
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 main {
+  top: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  justify-content: center;
   width: 100%;
 }
 
@@ -27,17 +29,19 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: auto;
   width: 90%;
   max-width: 380px;
   background-color: hsl(244, 38%, 16%);
-  margin-top: 10px;
-  border-radius: 6px;
+  margin-top: 2em;
+  border-radius: 10px;
+  padding-bottom: 1.5em;
 }
 
 .header-image {
   background-image: url("./images/image-header-mobile.jpg");
   width: 100%;
+  max-height: 300px;
   height: 250px;
   min-height: 200px;
   background-repeat: no-repeat;
@@ -101,28 +105,43 @@ main {
   margin-top: 1em;
   font-family: "Lexend Deca", sans-serif;
   justify-self: flex-end;
-  margin-bottom: 20px;
+  margin-bottom: 2em;
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: hsl(228, 80%, 63%);
 }
 
 @media (min-width: 1400px) {
+  html {
+    height: 100%;
+  }
+
+  body {
+    height: 100%;
+  }
+
   main {
     justify-content: center;
+    align-items: center;
+    height: 100%;
   }
   .card {
     height: 52%;
+    min-height: 45%;
     width: 90%;
     display: grid;
     grid-template: 1fr / 1fr 1fr;
     margin: 0;
     max-width: 1250px;
+    padding-bottom: 0;
   }
 
   .header-image {
+    box-sizing: border-box;
     background-image: url("./images/image-header-desktop.jpg");
+    background-size: cover;
+    min-height: 100%;
     height: 100%;
     width: 100%;
     border-radius: 0 10px 10px 0;
